--- a/www/pages/essayages.html
+++ b/www/pages/essayages.html
@@ -10,12 +10,19 @@
 			</div>
 			<div class="title">Mes essayages</div>
 			<div class="right">
-				<a href="#" class="link" ng-click="init()">
+				<a href="#" class="link" ng-click="getfile()">
 					<div class="f7-icons">plus_circle</div>
 				</a>
 			</div>
 		</div>
+		<div style="height: 0;"><input type="file" id="file" accept="image/*"/></div>
 	</div>
+
+	<div class="zoomed_in ng-hide" ng-show="zoomed">
+		<div class="close" ng-click="zoomed=false">Fermer</div>
+		<div class="delete" ng-click="DeleteEssayage()">Supprimer</div>
+	</div>
+
 	<div class="page-content">
         <div style="padding-left: 15px; padding-right: 15px; background-color: #F2F2F2; padding-bottom: 80px;">
             &nbsp;
@@ -30,7 +37,15 @@
         <div class="above_list_optk">
 
             <form class="list" id="my-form" style="margin-top: 0px; margin-bottom: 15px; text-transform: none;">
-                <div style="margin:15px 15px 0 10px">
+                <div style="margin:20px 0 0 0">
+
+					<ul class="essayage_list">
+						<li ng-repeat="essayage in essayages">
+							<div ng-style="{'background-image': 'url(' + essayage.image + ')'}" ng-click="zoomin(essayage)">
+								<div class="f7-icons">zoom_in</div>
+							</div>
+						</li>
+					</ul>
 
                 </div>
             </form>
