--- a/www/index.html
+++ b/www/index.html
@@ -162,6 +162,11 @@
 
   </div>
 
+  
+  
+  
+
+
   <script src="cordova.js"></script>
   
   <!-- CORDOVA_PLACEHOLDER_DONT_REMOVE -->
@@ -178,6 +183,7 @@
   <script src="js/app.js"></script>
   <script src="js/optic.js"></script>
 
+  <script>console.clear()</script>
   
   <script src="js/services/InitService.js"></script>
   <script src="js/controllers/MainController.js"></script>
@@ -189,6 +195,7 @@
   <script src="js/controllers/FavorisController.js"></script>
   <script src="js/controllers/RendezvousController.js"></script>
   <script src="js/controllers/ClickncollectController.js"></script>
+  <script src="js/controllers/AfterSaleController.js"></script>
   
   
 </body>
