--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -169,9 +169,9 @@
                                 </table>
                             </div>
                             <div class="rdv_actions">
-                                <button class="col button button-raised button-fill button-small button-round">Après vente</button>
-                                <!--<button class="col button button-raised button-fill button-small button-round color-black">Annuler le rendez-vous</button>
-                                <div class="trans_ordonnance"><span class="f7-icons">paperclip</span> Transmettre mon ordonnance</div>-->
+                                <a href="/aftersale/{{rdv.id}}/">
+                                    <button class="col button button-raised button-fill button-small button-round">Après vente</button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -296,7 +296,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="swiper-slide">
+                        <!--<div class="swiper-slide">
                             <div class="vsg_graydv">
                                 <div class="vsg_big_title">Trouver votre style</div>
                                 <div class="vsg_info_bulle">
@@ -316,7 +316,7 @@
                             <div style="margin:15px 40px">
                                 <button class="col button button-raised button-fill button-round">Sauvegarder mes choix</button>
                             </div>
-                        </div>
+                        </div>-->
                         <div class="swiper-slide">
                             <div class="vsg_graydv">
                                 <div class="vsg_big_title">Trouver votre style</div>
