--- a/www/pages/about.html
+++ b/www/pages/about.html
@@ -18,20 +18,20 @@
 	</div>
 	<div class="page-content">
 
-        <div style="padding-left: 15px; padding-right: 15px; background-color: #F2F2F2; padding-bottom: 80px;">
+        <div style="padding-left: 15px; padding-right: 15px; margin-top: -15px; padding-top: 15px;background-color:#F2F2F2; padding-bottom: 80px;">
             <div class="f7-icons place_icon">placemark</div>
             <div class="searchpro2" ng-click="filter=!filter"><i class="f7-icons">search</i></div>
             <div style="width:calc(100% - 40px)">
                 <button class="col button button-raised button-fill button-round" style="margin-top:15px; text-transform: none; color: #bbc6ff;">Localiser ma position</button>
             </div>
             
-            <form class="list" id="my-form" style="margin-top: 0px; margin-bottom: 15px;" ng-show="filter">
+            <form class="list" id="search-form" style="margin-top: 10px; margin-bottom: 15px;" ng-show="filter">
                 <div id="login_form">
-                    <ul>
-                        <li class="item-content item-input">
-                            <div class="item-inner">
+                    <ul style="background-color:transparent;">
+                        <li class="item-content item-input" style="padding: 0;">
+                            <div class="item-inner" style="padding-right: 0; padding-bottom: 0 !important">
                                 <div class="item-input-wrap">
-                                    <input type="text" placeholder="Votre recherche ..." ng-model="search" />
+                                    <input type="text" placeholder="Votre recherche ..." ng-model="search" style="background-color:#FFF; text-indent:10px; border-radius: 10px;" />
                                     <span class="input-clear-button"></span>
                                 </div>
                             </div>
