--- a/www/pages/home.html
+++ b/www/pages/home.html
@@ -79,8 +79,8 @@
             </div>
         </div>
 
-        <div style="margin-top: calc(var(--f7-navbar-height) + var(--f7-safe-area-top)); height: calc((180 * 100vw) / 877);">
-            <img src="assets/img/optic2.jpg" style="width: 100%;" />
+        <div style="margin-top: calc(var(--f7-navbar-height) + var(--f7-safe-area-top)); height: calc((180 * 100vw) / 877); height:57px; text-align:center; background-color:#1A3D87;">
+            <img src="assets/img/optic2.jpg" style="height: 100%;" />
         </div>
 
         <div class="tabs opt">
@@ -145,7 +145,7 @@
                             </div>
                             <div class="rdv_actions">
                                 <button class="col button button-raised button-fill button-small button-round">Transmettre mes formes de montures</button>
-                                <button class="col button button-raised button-fill button-small button-round color-black">Annuler le rendez-vous</button>
+                                <button class="col button button-raised button-fill button-small button-round color-black" ng-click="CancelRdv(rdv)">Annuler le rendez-vous</button>
                                 <div class="trans_ordonnance"><span class="f7-icons">paperclip</span> Transmettre mon ordonnance</div>
                             </div>
                         </div>
