--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,7 @@
                 <li><a href="/opticiens/" class="panel-close" data-view=".view-main">Trouver mon opticien</a></li>
                 <!--<li><a href="#">Tendances</a></li>-->
                 <li><a href="/howitworks/" class="panel-close" data-view=".view-main">Comment ça marche</a></li>
+                <li><a href="/cgu/" class="panel-close" data-view=".view-main">CGU</a></li>
                 <li><a href="/independants/" class="panel-close" data-view=".view-main">Opticiens</a></li>
                 <!--<li><a href="#">Favoris</a></li>-->
                 <li><a href="/parameters/" class="panel-close" data-view=".view-main">Paramètres</a></li>
