--- a/www/pages/cgu.html
+++ b/www/pages/cgu.html
@@ -65,14 +65,17 @@
             concernant les caractéristiques de leurs offres et services.<br/>
             OPTIC STORE FINDER propose de guider les Utilisateurs grâce à des étapes clés, de
             trouver rapidement l’Opticien à proximité et adapté à ses besoins.<br/><br/>
-            Ainsi, l’application offre la possibilité à l'Utilisateur :<br/><br/>
-            ● D’avoir des conseils adaptés à son visage<br/>
-            ● D'accéder à une cabine d’essayage virtuel<br/>
-            ● De trouver l’Opticien qui dispose d’un produit ou d’une prestation correspondant à sa
-            recherche<br/>
-            ● De contacter et/ou de géo-localiser son Opticien<br/>
-            ● De prendre rendez-vous chez son opticien favori<br/>
-            ● De réserver des produits en ligne<br/><br/>
+            Ainsi, l’application offre la possibilité à l'Utilisateur :
+        </p><br/>
+        <ul class="mgl-30" style="list-style-type:circle">
+            <li>D’avoir des conseils adaptés à son visage</li>
+            <li>D'accéder à une cabine d’essayage virtuel</li>
+            <li>De trouver l’Opticien qui dispose d’un produit ou d’une prestation correspondant à sa recherche</li>
+            <li>De contacter et/ou de géo-localiser son Opticien</li>
+            <li>De prendre rendez-vous chez son opticien favori</li>
+            <li>De réserver des produits en ligne</li>
+        </ul><br/>
+        <p class="mgl-10">
             L’application ne permet en aucun cas de réaliser des devis, ni de procéder à leur
             paiement en ligne.<br/>
             Pour utiliser l’application, l'Utilisateur se connecte sur l’application en la
@@ -83,7 +86,9 @@
         <p class="mgl-10">
             Une fois connecté, l'Utilisateur a le choix entre différentes catégories en vue de
             qualifier son besoin.<br/>
-            A titre d'exemple :<br/>
+            A titre d'exemple :
+        </p>
+        <p class="mgl-30">
             ● Votre visage : permet en quelques clics de mieux connaître les caractéristiques de son
             visage et avoir des conseils adaptés pour un meilleur choix.<br/>
             ● Votre style : propose une cabine d'essayage virtuel pour tester différents modèles et les
@@ -157,6 +162,8 @@
             que, notamment, des éventuelles pertes de données et des failles de sécurité
             pouvant résulter d'un virus ou d'un piratage.<br/>
             <b>c</b> - Les Utilisateurs s'interdisent :<br/>
+        </p>
+        <p class="mgl-30">
             ● D'accéder ou tenter d'accéder à l’application par tout moyen autre que ceux mis à leur
             disposition par OPTIC STORE FINDER.<br/>
             ● De partager, avec un tiers, tous identifiants de connexion (identifiant et mot de passe),
@@ -170,7 +177,9 @@
             ● Tenter d'interférer avec OPTIC STORE FINDER, son hébergeur ou son réseau, de
             quelque manière que ce soit, notamment au moyen d'un téléchargement de virus
             informatique, d'une surcharge, d'une attaque « DoS » ou « DDoS », « spamming » «
-            scrapping » ou « harvesting ».<br/>
+            scrapping » ou « harvesting ».
+        </p>
+        <p class="mgl-10">
             <b>d</b> - Les Utilisateurs feront leurs meilleurs efforts pour respecter les rendez-vous pris.
             La réservation peut être annulée, sans indemnité pour l'utilisateur.
         </p>
@@ -225,6 +234,8 @@
             personnels et certains que l'Utilisateur a subis.<br/>
             En tout état de cause, il est rappelé que OPTIC STORE FINDER décline toute
             responsabilité du fait notamment :<br/>
+        </p>
+        <p class="mgl-30">
             ● Des dommages résultant d'un manquement des Utilisateurs aux règles et
             recommandations d’OPTIC STORE FINDER résultant notamment des présentes
             conditions générales<br/><br/>
@@ -235,8 +246,8 @@
             fonctionnement de l'application, notamment imputable à un équipement non adapté,
             à des perturbations liées au fournisseur d'accès de l'Utilisateur et/ou à
             l'encombrement du réseau Internet et/ou pour toute autre raison liée à un cas de
-            force majeure
-            ● Des actes malveillants d'Utilisateurs
+            force majeure<br/>
+            ● Des actes malveillants d'Utilisateurs<br/>
             ● Des relations nouées entre l'Utilisateur et l’Opticien
         </p>
         <h2 class="mgl-10">6. PROPRIÉTÉ INTELLECTUELLE</h2>
@@ -246,10 +257,10 @@
             Les Utilisateurs reconnaissent les droits exclusifs de OPTIC SOLUTIONS sur ses
             droits de propriété intellectuelle, notamment ses marques et droit d'auteur, et
             s'interdisent d'en faire un usage quelconque et plus généralement de porter atteinte
-            aux droits de propriété intellectuelle de OPTIC SOLUTIONS.
+            aux droits de propriété intellectuelle de OPTIC SOLUTIONS.<br/>
             Toute reproduction intégrale ou partielle de l'application, de même que la création
             de liens hypertextes, sont interdites, sauf si OPTIC SOLUTIONS donne son
-            autorisation expresse et préalable.
+            autorisation expresse et préalable.<br/>
             OPTIC SOLUTIONS se réserve le droit de demander la suppression de tout lien
             renvoyant vers l'application qui n'aurait pas été, ou ne serait plus, autorisé et qui lui
             porterait préjudice.
@@ -258,13 +269,13 @@
         <p class="mgl-10">
             La transmission de demandes via l’application, entraîne pour OPTIC SOLUTIONS –
             en sa qualité de responsable de traitement – la collecte et le traitement des données
-            personnelles des Utilisateurs.
+            personnelles des Utilisateurs.<br/>
             Les informations recueillies sur ce formulaire sont enregistrées dans un fichier
             informatisé par OPTIC SOLUTIONS pour l’accès au contenu optique associé et
             enrichir l'expérience des utilisateurs. La base légale du traitement est par
-            consentement.
+            consentement.<br/>
             Les données collectées seront communiquées aux seuls destinataires suivants :
-            Opticiens.
+            Opticiens.<br/>
             Les données sont conservées pendant toute la durée d’inscription dans l’application.
             Vous pouvez accéder aux données vous concernant, les rectifier, demander leur
             effacement ou exercer votre droit à la limitation du traitement de vos données.
@@ -276,10 +287,10 @@
         </p>
         <h2 class="mgl-10">8. LOI APPLICABLE - LANGUE - ATTRIBUTION DE JURIDICTION</h2>
         <p class="mgl-10">
-            8.1 - Les conditions générales d'utilisation d’OPTIC STORE FINDER sont soumises au droit français.
-            8.2 - La langue des présentes et des relations entre les Parties est le français.
+            8.1 - Les conditions générales d'utilisation d’OPTIC STORE FINDER sont soumises au droit français.<br/>
+            8.2 - La langue des présentes et des relations entre les Parties est le français.<br/><br/>
 
-            CGU OPTIC STORE FINDER
+            CGU OPTIC STORE FINDER<br/><br/>
 
             8.3 - Les Parties s'efforceront de résoudre à l'amiable les litiges qui pourraient surgir
             entre elles relatifs aux présentes conditions.
