--- a/www/index.html
+++ b/www/index.html
@@ -31,9 +31,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"></script>
   <script type="text/javascript" src="js/angular-touch.js"></script>
   <script type="text/javascript" src="js/ngTouch.min.js"></script>
-  
-  
-  
+    
   <link rel="stylesheet" href="framework7/framework7-bundle.min.css">
   <link rel="stylesheet" href="css/icons.css">
   <link rel="stylesheet" href="css/app.css">
@@ -184,7 +182,7 @@
   <script src="js/app.js"></script>
   <script src="js/optic.js"></script>
 
-  <script>console.clear()</script>
+  <script>//console.clear()</script>
   
   <script src="js/services/InitService.js"></script>
   <script src="js/controllers/MainController.js"></script>
